<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"> 

        <TextView
            android:id="@+id/totalDistanceView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="left"
            android:text="@string/totalDistanceView"
            android:textAppearance="?android:attr/textAppearanceMedium"  />

        <EditText
            android:id="@+id/totalDistanceInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:maxLength="10" >
            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"> 
        
       	<TextView
            android:id="@+id/distanceTraveledView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="left"
            android:text="@string/distanceTraveledView"
            android:textAppearance="?android:attr/textAppearanceMedium"  />

        <EditText
            android:id="@+id/distanceTraveledInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:maxLength="10" >
            <requestFocus />
        </EditText>
            
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"> 
        
       	<TextView
            android:id="@+id/timeTraveledView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="left"
            android:text="@string/timeTraveledView"
            android:textAppearance="?android:attr/textAppearanceMedium"  />

        <EditText
            android:id="@+id/timeTraveledInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:maxLength="10" >
            <requestFocus />
        </EditText>
            
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"> 
        
       	<TextView
            android:id="@+id/remainingDistanceView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:gravity="left"
            android:text="@string/remainingDistanceView"
            android:textAppearance="?android:attr/textAppearanceMedium"  />

        <TextView
            android:id="@+id/remainingDistanceOutput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:gravity="center"
            android:text="@string/remainingDistanceOutput"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
     </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"> 
        
       	<TextView
            android:id="@+id/averageSpeedView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:gravity="left"
            android:text="@string/averageSpeedView"
            android:textAppearance="?android:attr/textAppearanceMedium"  />

        <TextView
            android:id="@+id/averageSpeedOutput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:gravity="center"
            android:text="@string/averageSpeedOutput"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
     </LinearLayout>
     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"> 
        
       	<TextView
            android:id="@+id/estimatedArrivalTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:gravity="left"
            android:text="@string/estimatedArrivalTime"
            android:textAppearance="?android:attr/textAppearanceMedium"  />

        <TextView
            android:id="@+id/estimatedArrivalTimeOutput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:gravity="center"
            android:text="@string/estimatedArrivalTimeOutput"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
     </LinearLayout>
     
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

         <Button
             android:id="@+id/calculateButton"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dp"
             android:layout_marginRight="100dp"
             android:gravity="center"
             android:text="@string/calculateButton" />
         
     </LinearLayout>
     
</LinearLayout>